@@ -31,6 +31,18 @@ func TestConfigValidate(t *testing.T) {
 			"", // No Error
 		},
 		{
+			Settings{
+				WinlogbeatConfig{
+					EventLogs: []EventLogConfig{
+						{Name: "App"},
+					},
+				},
+				map[string]interface{}{"other": "value"},
+			},
+			"1 error: Invalid top-level key 'other' found. Valid keys are " +
+				"logging, output, shipper, winlogbeat",
+		},
+		{
 			WinlogbeatConfig{},
 			"1 error: At least one event log must be configured as part of " +
 				"event_logs",
